Add copyright - Final commit

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p><img src="../excursion/resources/images/phone.jpeg"></p>
         <h1>Coming Soon for Iphone and Android</h1>
         <h5><a href="#">Download Excursion (Coming soon!)</a></h5>
+        <p id="copyright"><span>&#169</span>Excursion</p>
     </div>
     
     
